2004-08-24  Davyd Madeley  <davyd@madeley.id.au>

	* gtik.c: String composition is confusing and bad. Added a comment to
	assist those coping with #150894. Must fix after string freeze.

2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Remove references to screen-exec.
	* access/accessibledrawingarea.h: ANSIfication.
	* access/accessibledrawingareafactory.c:
	(accessible_drawing_area_factory_get_type): Same.
	* access/accessibledrawingareafactory.h: Export
	accessible_drawing_area_*factory*_get_type not
	accessible_drawing_area_get_type which is exported
	in accessibledrawingarea.h.
	* gtik.c: (gtik_applet_fill): Use g_signal_connect().
	Add extern prototype for set_relation(). Also remove
	a call to a non-existant setup_factory() function.

2004-06-17  Dennis Smit  <ds@nerds-incorporated.org>

	* gtik.c (splitChange): "No Change" string
	was marked strangly as reported by:
	Paisa Seeluangsawat  <paisa@users.sf.net>

	Fixes bug #136728.

2004-06-16  Dennis Smit  <ds@nerds-incorporated.org>

	* gtik.c (splitPrice, splitChange):
	Increased the size of the string to 1024 to avoid the crash.

	Patch by: Shakti Sen <shprasad@novell.com>

	Fixes bug #144403

2004-06-16  Dennis Smit  <ds@nerds-incorporated.org>
	
	* gtik.c (add_symbol): Adding symbols is
	coma and space separated.

	Patch by: shakti  <shprasad@novell.com>
	
	Fixes bug: #144406 and 144407.

2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>

	* gtik.c: HIG fixes for the treeview.
	
	Patch by: Ross Burton  <r.burton@180sw.com>

	Fixes bug: #144027.

2004-06-03  Dennis Smit  <ds@nerds-incorporated.org>

	* gtik.c (updateOutput): Add a string to indicate
	that there are no stocks to be monitored.

	Fixes bug #137677.

	Patch by: Arvind Samptur  <arvind.samptur@wipro.com>

2004-03-20  Arvind Samptur  <arvind.samptur@wipro.com>

	Approved by release team and Kevin

	* gtik.c (updateOutput): Don't go about
	fetching CSV  data  if we don't have any
	stocks to monitor. Fixes crash #137677
