@@ -1,26 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <omf>
   <resource>
-    <creator>
-      docs@gnome.org (GDP)
-    </creator>
-    <maintainer>
-      docs@gnome.org (GDP)
-    </maintainer>
-    <title>
-      Stock Ticker Applet Manual V2.5
-    </title>
-    <date>
-      2004-02-11
-    </date>
-    <version identifier="2.5" date="2004-02-11" description="Updated for GNOME 2.6, program version 2.5.4"/>
+    <creator>docs@gnome.org (GDP)</creator>
+    <maintainer>docs@gnome.org (GDP)</maintainer>
+    <title>Stock Ticker Applet Manual</title>
+    <date>2004-09-13</date>
+    <version identifier="2.8" date="2004-08-13"
+	     description="Updated for GNOME 2.8, program version 2.8"/>
     <subject category="GNOME|Applets|Accessories"/>
-    <description>
-      User manual for the Stock Ticker applet. 
-    </description>
-    <type>
-      user's guide
-    </type>
+    <description>User manual for the Stock Ticker applet</description>
+    <type>user's guide</type>
     <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
     <identifier url="gtik2_applet2.xml"/>
     <language code="C"/>
