@@ -1,3 +1,9 @@
+2004-09-13  Shaun McCance  <shaunm@gnome.org>
+
+	* help/C/gtik2_applet2-C.omf:
+	* help/C/gtik2_applet2.xml:
+	- Update for 2.8 from Angela Boyle
+
 2004-08-24  Davyd Madeley  <davyd@madeley.id.au>
 
 	* gtik.c: String composition is confusing and bad. Added a comment to
